# deferred-cell

./: Cargo.toml  README.md  release.toml
.github/workflows/: publish.yml
src/: lib.rs
